test/types/range/deitz/test_int8_range_big_stride.good
test_int8_range_big_stride.chpl:1: error: type mismatch applying 'by' to range(int) with int(64)
